--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-
+.idea
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
-/var/
+/var/cache
 /vendor/
 ###< symfony/framework-bundle ###
 
