--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "@fortawesome/fontawesome-free": "^6.5.1"
     }
 }
